--- a/twitter_crawling_don/UTopic/BoW_matrix.ipynb
+++ b/twitter_crawling_don/UTopic/BoW_matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "035d5e1e",
+   "id": "3e6e11d7",
    "metadata": {},
    "source": [
     "# BoW Matrix 구현\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2f3313fc",
+   "id": "1498f24e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "08e23f18",
+   "id": "f65d0d33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "91029b45",
+   "id": "6a7b5ed1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,24 +86,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "25824c81",
+   "execution_count": 7,
+   "id": "491552e2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " ...\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# stopwords\n",
     "vectorizer = TfidfVectorizer(lowercase=False, token_pattern=r'\\b([A-Z]+|[a-z]+)\\b')\n",
@@ -125,6 +111,24 @@
     "f_bow = np.count_nonzero(bow_matrix, axis=0)\n",
     "\n",
     "adjusted_bow_matrix = bow_matrix / (tf_bow * np.log(1 + A / (f_bow**2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "40541d73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adjusted BoW Matrix Shape: (150000, 72106)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Adjusted BoW Matrix Shape:\", adjusted_bow_matrix.shape)"
    ]
   }
  ],
