--- a/twitter_crawling_don/UTopic/ContrastiveTM-main.ipynb
+++ b/twitter_crawling_don/UTopic/ContrastiveTM-main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
     "    else:\n",
     "        return parser.parse_args()\n",
     "\n",
-    "def data_load(dataset_name, sample_size=100000):\n",
+    "def data_load(dataset_name, sample_size=10000):\n",
     "    should_measure_hungarian = False\n",
     "    textData = []\n",
     "    \n",
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,27 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'sentence-transformers/paraphrase-MiniLM-L6-v2'"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "args.base_model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -329,16 +309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "299047"
+       "29917"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -368,31 +348,11 @@
      "output_type": "stream",
      "text": [
       "Platform: Twitter\n",
-      "Sample text: my first attempt at Chat GPT unearths AI inability to understand basic music theory im here to help but hey flick me some coin \n",
-      "Sample Index: tensor(54558)\n",
+      "Sample text: lmao alt ending deathnote ChatGPT \n",
+      "Sample Index: tensor(55470)\n",
       "--------------------------------------------------\n",
-      "Twitter BoW matrix batch size: (64, 48353)\n",
-      "Twitter BoW matrix full size: (100000, 48353)\n",
-      "--------------------------------------------------\n",
-      "Positive sample for first text in batch: ('my first attempt at Chat GPT unearths AI inability to understand basic music theory im here to help but hey flick me some coin ', 'i am having too much fun with chat gpt to the point where i feel its a bit abusive')\n",
-      "--------------------------------------------------\n",
-      "Platform: Reddit\n",
-      "Sample text: chrome extension talktochatgpt will allow you to talk to chatgpt via voice with spoken responses very cool\n",
-      "Sample Index: tensor(46697)\n",
-      "--------------------------------------------------\n",
-      "Reddit BoW matrix batch size: (64, 48353)\n",
-      "Reddit BoW matrix full size: (100000, 48353)\n",
-      "--------------------------------------------------\n",
-      "Positive sample for first text in batch: ('chrome extension talktochatgpt will allow you to talk to chatgpt via voice with spoken responses very cool', 'i am having too much fun with chat gpt to the point where i feel its a bit abusive')\n",
-      "--------------------------------------------------\n",
-      "Platform: YouTube\n",
-      "Sample text:  Stern lets just keep the joke to our selves\n",
-      "Sample Index: tensor(38419)\n",
-      "--------------------------------------------------\n",
-      "YouTube BoW matrix batch size: (64, 48353)\n",
-      "YouTube BoW matrix full size: (100000, 48353)\n",
-      "--------------------------------------------------\n",
-      "Positive sample for first text in batch: (' Stern lets just keep the joke to our selves', 'i am having too much fun with chat gpt to the point where i feel its a bit abusive')\n",
+      "Twitter BoW matrix batch size: (64, 123412)\n",
+      "Twitter BoW matrix full size: (299047, 123412)\n",
       "--------------------------------------------------\n"
      ]
     }
@@ -477,6 +437,9 @@
     "\n",
     "platform_names = [\"Twitter\", \"Reddit\", \"YouTube\"]\n",
     "\n",
+    "all_texts = twitter_ds.texts + reddit_ds.texts + youtube_ds.texts\n",
+    "\n",
+    "# 병합된 데이터를 기반으로 BoW 행렬 생성\n",
     "for idx, batch in enumerate(first_batches):\n",
     "    texts, targets = batch\n",
     "    print(f\"Platform: {platform_names[idx]}\")\n",
@@ -484,46 +447,43 @@
     "    print(\"Sample Index:\", targets[0])\n",
     "    print('-' * 50)\n",
     "    \n",
-    "    # BoW 매트릭스 생성 및 크기 출력\n",
-    "    bow_matrix_batch, tf_matrix_full = process_text_data(texts, twitter_ds.texts)\n",
+    "    # 병합된 all_texts를 사용하여 BoW 매트릭스 생성 및 크기 출력\n",
+    "    bow_matrix_batch, tf_matrix_full = process_text_data(texts, all_texts)\n",
     "    print(f\"{platform_names[idx]} BoW matrix batch size: {bow_matrix_batch.shape}\")\n",
     "    print(f\"{platform_names[idx]} BoW matrix full size: {tf_matrix_full.shape}\")\n",
     "    print('-' * 50)\n",
     "    \n",
-    "    positive_samples = compute_bow_batchwise(texts, twitter_ds.texts)\n",
+    "    positive_samples = compute_bow_batchwise(texts, all_texts)\n",
     "    print(\"Positive sample for first text in batch:\", positive_samples[0])\n",
-    "    print('-' * 50)"
+    "    print('-' * 50)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'BertDataset' is not defined",
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'texts'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#trainds = BertDataset(bert=bert_name,text_list=textData.texts, N_word=n_word, vectorizer=None, lemmatize=True)\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m all_data_trainds \u001b[38;5;241m=\u001b[39m \u001b[43mBertDataset\u001b[49m(bert\u001b[38;5;241m=\u001b[39mbert_name, text_list\u001b[38;5;241m=\u001b[39mtextData\u001b[38;5;241m.\u001b[39mdata, N_word\u001b[38;5;241m=\u001b[39mn_word, vectorizer\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, lemmatize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      4\u001b[0m twiiter_trainds \u001b[38;5;241m=\u001b[39m BertDataset(bert\u001b[38;5;241m=\u001b[39mbert_name, text_list\u001b[38;5;241m=\u001b[39mtwiiter_data, N_word\u001b[38;5;241m=\u001b[39mn_word, vectorizer\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, lemmatize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      5\u001b[0m reddit_trainds \u001b[38;5;241m=\u001b[39m BertDataset(bert\u001b[38;5;241m=\u001b[39mbert_name, text_list\u001b[38;5;241m=\u001b[39mreddit_data, N_word\u001b[38;5;241m=\u001b[39mn_word, vectorizer\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, lemmatize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'BertDataset' is not defined"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#trainds = BertDataset(bert=bert_name,text_list=textData.texts, N_word=n_word, vectorizer=None, lemmatize=True)\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m all_data_trainds \u001b[38;5;241m=\u001b[39m BertDataset(bert\u001b[38;5;241m=\u001b[39mbert_name, text_list\u001b[38;5;241m=\u001b[39m\u001b[43mtextData\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtexts\u001b[49m, N_word\u001b[38;5;241m=\u001b[39mn_word, vectorizer\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, lemmatize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      4\u001b[0m twiiter_trainds \u001b[38;5;241m=\u001b[39m BertDataset(bert\u001b[38;5;241m=\u001b[39mbert_name, text_list\u001b[38;5;241m=\u001b[39mtwiiter_data, N_word\u001b[38;5;241m=\u001b[39mn_word, vectorizer\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, lemmatize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      5\u001b[0m reddit_trainds \u001b[38;5;241m=\u001b[39m BertDataset(bert\u001b[38;5;241m=\u001b[39mbert_name, text_list\u001b[38;5;241m=\u001b[39mreddit_data, N_word\u001b[38;5;241m=\u001b[39mn_word, vectorizer\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, lemmatize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'texts'"
      ]
     }
    ],
    "source": [
     "#trainds = BertDataset(bert=bert_name,text_list=textData.texts, N_word=n_word, vectorizer=None, lemmatize=True)\n",
     "\n",
-    "all_data_trainds = BertDataset(bert=bert_name, text_list=textData.data, N_word=n_word, vectorizer=None, lemmatize=True)\n",
-    "twiiter_trainds = BertDataset(bert=bert_name, text_list=twiiter_data, N_word=n_word, vectorizer=None, lemmatize=True)\n",
-    "reddit_trainds = BertDataset(bert=bert_name, text_list=reddit_data, N_word=n_word, vectorizer=None, lemmatize=True)\n",
-    "youtube_trainds = BertDataset(bert=bert_name, text_list=youtube_data, N_word=n_word, vectorizer=None, lemmatize=True)\n",
+    "# 텍스트만 추출\n",
+    "texts_only = [text[0] for text in textData]\n",
     "\n",
-    "# trainds_list에 모든 trainds 인스턴스를 저장\n",
-    "trainds_list = [twitter_trainds, reddit_trainds, youtube_trainds]\n",
+    "# BertDataset 초기화\n",
+    "all_data_trainds = BertDataset(bert=bert_name, text_list=texts_only, N_word=n_word, vectorizer=None, lemmatize=True)\n",
+    "\n",
     "\n",
     "#유사도 행렬 저장 경로 설정\n",
     "#basesim_path = f\"./save/{args.dataset}_{bert_name_short}_basesim_matrix_full.pkl\"\n",
