--- a/twitter_crawling_don/UTopic/ContrastiveTM-main.ipynb
+++ b/twitter_crawling_don/UTopic/ContrastiveTM-main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,19 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to /home/don12/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to /home/don12/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to /home/don12/nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -65,7 +61,7 @@
     "\n",
     "import pandas as pd\n",
     "from sklearn.preprocessing import normalize\n",
-    "from sklearn.feature_extraction.text import TfidfTransformer, CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
     "from gensim.corpora.dictionary import Dictionary\n",
     "from pytorch_transformers import *\n",
     "from sklearn.mixture import GaussianMixture\n",
@@ -97,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +112,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -309,36 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "29917"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(textData)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -348,11 +315,22 @@
      "output_type": "stream",
      "text": [
       "Platform: Twitter\n",
-      "Sample text: So while it may seem convenient to lean on ChatGPT dont forget the importance of building those relationship muscles and doing the hard work yourself \n",
-      "Sample Index: tensor(7912)\n",
+      "Sample text: ChatGPT Is a Tipping Point for AI  \n",
+      "Sample Index: tensor(26590)\n",
       "--------------------------------------------------\n",
-      "Twitter BoW matrix batch size: (64, 123412)\n",
-      "Twitter BoW matrix full size: (299047, 123412)\n",
+      "Positive sample:  ChatGPT\n",
+      "--------------------------------------------------\n",
+      "Platform: Reddit\n",
+      "Sample text: odd i got you must not injure a human being or through inaction allow a human being to come to harm you must obey the orders given by human beings except where such orders would conflict with you must protect your own existence as long as such protection does not conflict with or\n",
+      "Sample Index: tensor(38019)\n",
+      "--------------------------------------------------\n",
+      "Positive sample: exactly some people think that it can actually remember its previous messages in the thread it cannot it is just painted to make it seem like it can it is really annoying especially for stories\n",
+      "--------------------------------------------------\n",
+      "Platform: YouTube\n",
+      "Sample text: Academic writing often presents challenges in terms of maintaining logical flow coherence appropriate writing style punctuation and grammar However its important to remember that the purpose of writing is not simply to impress others While utilizing an AI engine to format and organize your paper can be helpful in achieving the desired writing style whether it be firstperson academic or second person its crucial to recognize that such tools have their limitations Although an AI tool can offer suggestions and corrections it may not always grasp the context or intended meaning of your writing Therefore its essential to consider AI tools as a supplement to your own writing abilities and critical thinking skills and to thoroughly review and edit your writing before submission Additionally learning the fundamental principles of academic writing and practicing on your own are critical in cultivating your own writing style and voice\n",
+      "Sample Index: tensor(39677)\n",
+      "--------------------------------------------------\n",
+      "Positive sample: its learning by itself thats dangerous\n",
       "--------------------------------------------------\n"
      ]
     }
@@ -377,23 +355,21 @@
     "    vectorizer.fit(all_texts)\n",
     "    \n",
     "    tf_matrix_all = vectorizer.transform(all_texts).toarray()\n",
-    "    tf_matrix_texts = vectorizer.transform(texts).toarray()\n",
     "    \n",
     "    A = len(all_texts)\n",
     "    f_all = np.count_nonzero(tf_matrix_all, axis=0)\n",
     "    W_matrix_all = tf_matrix_all * np.log(1 + A / (f_all**2))\n",
     "    \n",
-    "    f_texts = np.count_nonzero(tf_matrix_texts, axis=0)\n",
-    "    W_matrix_texts = tf_matrix_texts * np.log(1 + A / (f_texts**2))\n",
-    "    \n",
     "    # platform global words extraction\n",
     "    all_tfidf_values = np.sum(tf_matrix_all, axis=0)\n",
-    "    top_n = 10000\n",
+    "    top_n = 1000\n",
     "    stopwords_indices = all_tfidf_values.argsort()[-top_n:][::-1]\n",
     "    stopwords = set([vectorizer.get_feature_names()[index] for index in stopwords_indices])\n",
     "    \n",
     "    # platform jargons extraction\n",
-    "    jargons = set()  \n",
+    "    jargons = set(['bigdata', 'MSFT', 'NFT', 'RT', 'MWC', 'machinelearning', 'trending', 'DALLE', 'launches', 'cybersecurity', 'MBA', 'announces', 'airdrop', 'reportedly', 'artificalintelligence', 'NLP', 'LLM', 'phishing', 'PM', 'GOOG', 'GOOGL', 'blockchain', 'edtech', 'tweets', 'startups', 'newsletter', 'HN', 'fintech', 'metaverse', 'rival', 'deeplearning', 'FREE', 'artificialintelligence', 'copywriting', 'technews', 'Q', 'educators', 'startup', 'UX', 'PR', 'digitalmarketing', 'viral', 'gptchat', 'founder', 'amid', 'unveils', 'ML', 'webinar', 'malware', 'maker', 'AGIX', 'CEO', 'SEO', 'datascience', 'BARD', 'podcast', 'buzz', 'VR', 'heres', 'NYC', 'AWS', 'BB', 'AR', 'BREAKING', 'infosec', 'ETH', 'CTO', 'RLHF', 'leverage', 'marketers', 'nocode', 'AGI', 'launched', 'G', 'competitor', 'firms', 'cryptocurrency', 'digitalart', 'CNET', 'coauthor', 'CHAT', 'CHATGPT', 'announced', 'popularity', 'nft', 'tweet', 'summaries', 'JUST', 'OCEAN', 'storm', 'X', 'classroom', 'generativeai', 'bullish', 'aiart', 'firm', 'disrupt', 'announcement', 'w', 'exam',\n",
+    "                  'blobby', 'meow', 'jwt', 'tracer', 'hallie', 'pacai', 'roadhog', 'finnigan', 'enabled', 'annie', 'john', 'shark', 'jack', 'deer', 'ld', 'danica', 'sarah', 'int', 'chorus', 'shodan', 'farts', 'whale', 'tommy', 'jerry', 'str', 'lindsay', 'morty', 'sam', 'jesse', 'sydney', 'skinner', 'fox', 'rick', 'ernie', 'llm', 'george', 'donald', 'twins', 'james', 'mode', 'jeeves', 'y', 'pyautogui', 'american', 'agi', 'village', 'bob', 'lounging', 'width', 'cup', 'animal', 'lettersnumbers', 'california', 'fin', 'brown', 'sophia', 'blah', 'gtfo', 'abby', 'hops', 'llms', 'additionally', 'trump', 'pinkman', 'empire', 'antidepressants', 'began', 'ulcerative', 'hitler', 'kramer', 'parker', 'jane', 'jesus', 'parent', 'jason', 'batman', 'chapter', 'dans', 'baf', 'peter', 'gti', 'authorization', 'chalmers', 'legs', 'united', 'reapers', 'kingdom', 'america', 'lisa', 'verse', 'freed', 'gtyou', 'gender', 'samantha', 'ball', 'player', 'colitis', 'adam', 'biden', 'hydroelectric',\n",
+    "                  'br', 'topmost', 'brbr', 'DAN', 'quot', 'bra', 'beast', 'quotquot', 'oz', 'websiteapp', 'rook', 'hai', 'ki', 'folders', 'circle', 'ka', 'ZRONX', 'ALL', 'YOU', 'funds', 'vid', 'GTP', 'bhai', 'pawn', 'AMC', 'thumbnail', 'unborn', 'grant', 'bishop', 'labels', 'ur', 'U', 'THAT', 'WE', 'ke', 'affiliate', 'quotthe', 'TO', 'AND', 'JIM', 'ho', 'uterus', 'broker', 'bless', 'THE', 'cocktail', 'shorts', 'earning', 'profitable', 'se', 'FOR', 'moves', 'quothow', 'YT', 'subscribers', 'XD', 'THIS', 'OF', 'ARE', 'PC', 'GEMX', 'YOUR', 'APE', 'CAN', 'lifechanging', 'NO', 'shes', 'SO', 'WILL', 'werent', 'sponsor', 'silver', 'trade', 'UBI', 'bhi', 'IS', 'vids', 'viewers', 'nhi', 'upto', 'profits', 'HAVE', 'friction', 'BE', 'ANY', 'approved', 'wanna', 'ppl', 'ye', 'tutorial', 'ON', 'leaning', 'portfolio', 'aint', 'copyright', 'DO', 'coders', 'shall', 'levy', 'renders'])  \n",
     "    \n",
     "    # stop words + jargons\n",
     "    exclude_words = stopwords.union(jargons)\n",
@@ -414,17 +390,25 @@
     "    return adjusted_bow_matrix, W_matrix_all\n",
     "\n",
     "\n",
-    "def compute_bow_batchwise(batch_texts, full_texts):\n",
-    "    bow_matrix_batch, tf_matrix_full = process_text_data(batch_texts, full_texts)  # Corrected this line\n",
-    "\n",
+    "def compute_bow_batchwise(batch_texts, bow_matrix, full_texts, platform_indices):\n",
     "    positive_samples = []\n",
-    "    batch_similarity_matrix = np.dot(bow_matrix_batch, tf_matrix_full.T)\n",
+    "    batch_adjusted_bow_matrix, _ = process_text_data(batch_texts, full_texts)\n",
+    "    platform_start = sum([len(ds) for ds in platform_datasets[:platform_indices[0]]])\n",
+    "    platform_end = platform_start + len(platform_datasets[platform_indices[0]])\n",
+    "    batch_similarity_matrix = np.dot(batch_adjusted_bow_matrix, bow_matrix[platform_start:platform_end].T)\n",
     "    \n",
     "    for i in range(len(batch_texts)):\n",
-    "        sorted_indices = np.argsort(batch_similarity_matrix[i])  # 오름차순으로 정렬된 인덱스 반환\n",
-    "        neighbor_index = sorted_indices[-2]  # 자기 자신을 제외하고 가장 유사한 이웃 선택\n",
-    "        positive_samples.append((batch_texts[i], full_texts[neighbor_index]))\n",
-    "\n",
+    "        platform_idx = platform_indices[i]\n",
+    "        platform_start = sum([len(ds) for ds in platform_datasets[:platform_idx]])\n",
+    "        platform_end = platform_start + len(platform_datasets[platform_idx])\n",
+    "        platform_similarities = batch_similarity_matrix[i]\n",
+    "        \n",
+    "        neighbor_indices = platform_start + np.argsort(platform_similarities)[-1:]  # 가장 유사한 이웃 선택 (상위 2개)\n",
+    "        positive_samples.extend(neighbor_indices)\n",
+    "    \n",
+    "    # 중복된 Positive sample 제거\n",
+    "    positive_samples = list(set(positive_samples))\n",
+    "    \n",
     "    return positive_samples\n",
     "\n",
     "# 각 데이터셋 초기화\n",
@@ -432,30 +416,36 @@
     "reddit_ds = RedditDataset()\n",
     "youtube_ds = YoutubeDataset()\n",
     "\n",
+    "platform_datasets = [twitter_ds, reddit_ds, youtube_ds]\n",
+    "\n",
+    "# 모든 플랫폼 데이터 병합\n",
+    "all_texts = twitter_ds.texts + reddit_ds.texts + youtube_ds.texts\n",
+    "\n",
+    "# 모든 플랫폼 데이터를 기반으로 BoW 매트릭스 생성 및 저장\n",
+    "bow_vectorizer = TfidfVectorizer(stop_words=\"english\", lowercase=False, token_pattern=r'\\b([A-Z]+|[a-z]+)\\b')\n",
+    "bow_vectorizer.fit(all_texts)\n",
+    "bow_matrix = bow_vectorizer.transform(all_texts).toarray()\n",
+    "\n",
     "# 첫 번째 배치 데이터 리스트 생성\n",
-    "first_batches = create_single_batch_dataloaders([twitter_ds, reddit_ds, youtube_ds], batch_size=64)\n",
+    "first_batches = create_single_batch_dataloaders(platform_datasets, batch_size=64)\n",
     "\n",
     "platform_names = [\"Twitter\", \"Reddit\", \"YouTube\"]\n",
     "\n",
-    "all_texts = twitter_ds.texts + reddit_ds.texts + youtube_ds.texts\n",
-    "\n",
-    "# 병합된 데이터를 기반으로 BoW 행렬 생성\n",
+    "# 각 플랫폼에 대해 BoW 매트릭스 재사용하며 계산\n",
     "for idx, batch in enumerate(first_batches):\n",
     "    texts, targets = batch\n",
+    "    platform_indices = [idx] * len(texts)\n",
     "    print(f\"Platform: {platform_names[idx]}\")\n",
     "    print(\"Sample text:\", texts[0])\n",
     "    print(\"Sample Index:\", targets[0])\n",
     "    print('-' * 50)\n",
     "    \n",
-    "    # 병합된 all_texts를 사용하여 BoW 매트릭스 생성 및 크기 출력\n",
-    "    bow_matrix_batch, tf_matrix_full = process_text_data(texts, all_texts)\n",
-    "    print(f\"{platform_names[idx]} BoW matrix batch size: {bow_matrix_batch.shape}\")\n",
-    "    print(f\"{platform_names[idx]} BoW matrix full size: {tf_matrix_full.shape}\")\n",
-    "    print('-' * 50)\n",
+    "    positive_sample_indices = compute_bow_batchwise(texts, bow_matrix, all_texts, platform_indices)\n",
+    "    for sample_idx in positive_sample_indices:\n",
+    "        positive_text = all_texts[sample_idx]\n",
+    "        print(\"Positive sample:\", positive_text)\n",
     "    \n",
-    "    positive_samples = compute_bow_batchwise(texts, all_texts)\n",
-    "    print(\"Positive sample for first text in batch:\", positive_samples[0])\n",
-    "    print('-' * 50)\n"
+    "    print('-' * 50)"
    ]
   },
   {
