platform contrastive TM_pos

--- a/twitter_crawling_don/UTopic/Contrastive_PTM.ipynb
+++ b/twitter_crawling_don/UTopic/Contrastive_PTM.ipynb
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -335,7 +335,7 @@
     "    return dataloaders\n",
     "\n",
     "\n",
-    "def compute_bow_batchwise(texts, all_texts):\n",
+    "def process_text_data(texts, all_texts, bow_vectorizer):\n",
     "    # jargons bt c-TF-IDF\n",
     "    jargons = set(['bigdata', 'RT', 'announces', 'rival', 'MSFT', 'launches', 'SEO', 'tweets', 'WSJ', 'unveils', 'MBA', 'machinelearning', 'HN', 'artificalintelligence', 'DALLE', 'NFT', 'NLP', 'edtech', 'cybersecurity', 'malware', 'CEO', 'ML', 'JPEG', 'GOOGL', 'UX', 'artificialintelligence', 'technews', 'fintech', 'tweet', 'CHATGPT', 'viral', 'blockchain', 'BARD', 'reportedly', 'BREAKING', 'deeplearning', 'educators', 'datascience', 'GOOG', 'competitor', 'FREE', 'startups', 'AGIX', 'CHAT', 'CNET', 'integrating', 'BB', 'maker', 'passes', 'NYT', 'yall', 'rescue', 'heres', 'NYC', 'LLM', 'airdrop', 'powered', 'podcast', 'Q', 'PM', 'newsletter', 'startup', 'TSLA', 'WIRED', 'digitalmarketing', 'CTO', 'changer', 'announced', 'database', 'launched', 'warns', 'popularity', 'AWS', 'nocode', 'trending', 'metaverse', 'cc', 'PR', 'RSS', 'MWC', 'USMLE', 'copywriting', 'marketers', 'tweeting', 'amid', 'AGI', 'socialmedia', 'webinar', 'agrees', 'invests', 'launch', 'killer', 'GM', 'bullish', 'edchat', 'RLHF', 'integration', 'fastestgrowing', 'CNN', 'exam',\n",
     "                  'deleted', 'gif', 'giphy', 'dm', 'removed', 'remindme', 'yup', 'sydney', 'yep', 'patched', 'nope', 'giphydownsized', 'vpn', 'ascii', 'ah', 'chadgpt', 'nerfed', 'jesus', 'xd', 'wtf', 'upvote', 'nah', 'op', 'mods', 'hahaha', 'nsfw', 'huh', 'holy', 'iq', 'jailbreak', 'blah', 'bruh', 'yea', 'agi', 'porn', 'waitlist', 'nerf', 'downvoted', 'refresh', 'omg', 'sus', 'characterai', 'meth', 'chinese', 'sub', 'rick', 'american', 'elon', 'sam', 'quack', 'youchat', 'uk', 'chad', 'archived', 'youcom', 'screenshot', 'llm', 'hitler', 'lmao', 'playground', 'rpg', 'delete', 'tldr', 'davinci', 'trump', 'hangman', 'haha', 'tay', 'karma', 'john', 'chatgtp', 'url', 'wokegpt', 'offended', 'fucked', 'redditor', 'ceo', 'agreed', 'emojis', 'cheers', 'ais', 'tag', 'wow', 'lmfao', 'p', 'rip', 'chats', 'hmm', 'bypass', 'llms', 'temperature', 'login', 'cgpt', 'windows', 'novelai', 'biden', 'donald', 'christmas', 'ms', 'cringe',\n",
@@ -363,10 +363,10 @@
     "    return normalized_bow_matrix_texts\n",
     "\n",
     "\n",
-    "def compute_bow_batchwise(batch_texts, bow_matrix, full_texts, platform_indices):\n",
+    "def compute_bow_batchwise(batch_texts, bow_matrix, full_texts, platform_indices, bow_vectorizer, platform_datasets):\n",
     "    positive_samples = []\n",
     "    \n",
-    "    batch_adjusted_bow_matrix = process_text_data(batch_texts, full_texts)\n",
+    "    batch_adjusted_bow_matrix = process_text_data(batch_texts, full_texts, bow_vectorizer)\n",
     "    print(\"Batch Adjusted BoW Matrix:\", batch_adjusted_bow_matrix)\n",
     "    \n",
     "    for i in range(len(batch_texts)):\n",
@@ -394,7 +394,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -403,184 +403,42 @@
      "text": [
       "Platform: Twitter\n",
       "Batch index: 0\n",
-      "Sample text: ChatGPT doesnt get me at all \n",
-      "Sample Index: tensor(14521)\n",
+      "Sample text:  ChatGPT\n",
+      "Sample Index: tensor(33970)\n",
       "--------------------------------------------------\n",
       "Shape of the normalized BoW matrix: (8, 123112)\n",
-      "Batch Adjusted BoW Matrix: [[0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.11449921 0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+      "Batch Adjusted BoW Matrix: [[0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
       " ...\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]]\n",
-      "Positive sample for text 0:  Andrei because they doesnt\n",
-      "Positive sample for text 1: ChatGPT for link building A primer   \n",
-      "Positive sample for text 2: i guess you will have to come up with offensive jokes yourself that or convince someone who has an account to make offensive jokes using the ai for you\n",
-      "Positive sample for text 3:  Its already better at spelling and grammar Clearly\n",
-      "Positive sample for text 4: According to Chat GPT who are you exactly\n",
-      "Positive sample for text 5: How I use ChatGPT as a UIUX Designer by Vikalp Kaushik\n",
-      " \n",
-      "Positive sample for text 6: I think this will help us to be more productive\n",
-      "Positive sample for text 7:   Openai  ChatGPT can write out a template too\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]]\n",
+      "Positive sample for text 0: ChatGPT is remarkable The ability to repurpose and condense information into coherent sentences is impressive It might make you believe it is human though its extreme literalmindedness leaves it a long way from convincing you it is British\n",
+      "\n",
+      "\n",
+      "Positive sample for text 1: ChatGPT is remarkable The ability to repurpose and condense information into coherent sentences is impressive It might make you believe it is human though its extreme literalmindedness leaves it a long way from convincing you it is British\n",
+      "\n",
+      "\n",
+      "Positive sample for text 2: Get ChatGPT to write your professional bio from LinkedIn \n",
+      "Positive sample for text 3:  Version  Frontend  Backend  ChatGPT API\n",
+      "Positive sample for text 4: Looks like ChatGPT and friends have come for our bear market income too \n",
+      "Positive sample for text 5: Ok this blows my mind ChatGPT AI Jurabubble \n",
+      "Positive sample for text 6:  infinite monkey theorem could be a reality if the monkey are given ChatGPT instead of a typewriter\n",
+      "Positive sample for text 7: we need critical thinking skills\n",
       "--------------------------------------------------\n",
       "Platform: Twitter\n",
       "Batch index: 1\n",
-      "Sample text:  ChatGPT say Junk Jockeys\n",
-      "Sample Index: tensor(80834)\n",
-      "--------------------------------------------------\n",
-      "Shape of the normalized BoW matrix: (8, 123112)\n",
-      "Batch Adjusted BoW Matrix: [[0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " ...\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n",
-      "Positive sample for text 0: What would Plato say about ChatGPT \n",
-      "Positive sample for text 1: RT  I asked ChatGPT investors burning questions  and a CIO told me why the bot wont be challenging Wall Streets top stockpickers anytime soon \n",
-      "Positive sample for text 2:  chatgpt\n",
-      "Positive sample for text 3: What Does ChatGPT Mean For The Future of Work\n",
-      "\n",
-      "creativecontent writers writings chatgpt ai contentcreation\n",
-      "\n",
-      "Positive sample for text 4: Ai should be regulated\n",
-      "Positive sample for text 5: So I asked s ChatGPT to write an episode of  about itself \n",
-      "Positive sample for text 6: completely correct\n",
-      "Positive sample for text 7:  ChatGPT Something that will change the world\n",
-      "--------------------------------------------------\n",
-      "Platform: Twitter\n",
-      "Batch index: 2\n",
-      "Sample text: ChatGPT is a gamechanger with impressive capabilities that has revolutionized communication but what about copyright infringement \n",
-      "\n",
-      "Get the facts about what ChatGPT can do and the legal implications in our February IPWatchbyDOA article  \n",
-      "Sample Index: tensor(58586)\n",
+      "Sample text: Unleash your entrepreneurial spirit in  as a Solopreneur with the power of ChatGPT and NoCode tools Validate your idea research target market and achieve success Empower yourself and become a leader in your field  EntrepreneurTips \n",
+      "Sample Index: tensor(78212)\n",
       "--------------------------------------------------\n",
       "Shape of the normalized BoW matrix: (8, 123112)\n",
       "Batch Adjusted BoW Matrix: [[0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " ...\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.06153175 0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]]\n",
-      "Positive sample for text 0: ChatGPT is a gamechanger\n",
-      "Positive sample for text 1:  This thread is saved to your Notion database\n",
-      "\n",
-      "Tags Youtube Chatgpt\n",
-      "Positive sample for text 2: Such artificial intelligence ChatGPT   \n",
-      "Positive sample for text 3: Breaking ArtificialIntelligence AI News Baidu leaps to month high as it reveals plan to launch ChatGPTstyle Ernie Bot  CNBC \n",
-      "Positive sample for text 4: NEW Microsoft is making a multibillliondollar investment in OpenAI the pioneering artificial intelligence research lab behind ChatGPT \n",
-      "Positive sample for text 5: Microsoft in talks to invest  billion in ChatGPT owner Semafor  \n",
-      "Positive sample for text 6:  A large language model Like chatgpt\n",
-      "Positive sample for text 7:  still chat GPT\n",
-      "--------------------------------------------------\n",
-      "Platform: Twitter\n",
-      "Batch index: 3\n",
-      "Sample text:  Did ChatGPT write this\n",
-      "Sample Index: tensor(91056)\n",
-      "--------------------------------------------------\n",
-      "Shape of the normalized BoW matrix: (8, 123112)\n",
-      "Batch Adjusted BoW Matrix: [[0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " ...\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n",
-      "Positive sample for text 0:  Did ChatGPT write this \n",
-      "Positive sample for text 1:   ChatGPT is not creative what it does is description of creativity  \n",
-      "Positive sample for text 2: Currently AI like ChatGPTs biggest problem is differentiation between the most popular answer and the CORRECT one\n",
-      "Positive sample for text 3: Default seems to be back for Plus users ChatGPT ChatGPTPlus\n",
-      "Positive sample for text 4: You think Googling is a skill\n",
-      "\n",
-      "Dude using Chat GPT also is a skill \n",
-      "Positive sample for text 5: ChatGPT is remarkable The ability to repurpose and condense information into coherent sentences is impressive It might make you believe it is human though its extreme literalmindedness leaves it a long way from convincing you it is British\n",
-      "\n",
-      "\n",
-      "Positive sample for text 6: Googles AI chatbot is out to rival ChatGPT ArtificialIntelligence AI  \n",
-      "Positive sample for text 7: at least it gives you references so you can check for yourself\n",
-      "--------------------------------------------------\n",
-      "Platform: Twitter\n",
-      "Batch index: 4\n",
-      "Sample text: Long live the ChatGPTThe king is dead long live the king\n",
-      "Sample Index: tensor(77125)\n",
-      "--------------------------------------------------\n",
-      "Shape of the normalized BoW matrix: (8, 123112)\n",
-      "Batch Adjusted BoW Matrix: [[0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.01934206 0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.03443658 0.         0.         ... 0.         0.         0.        ]\n",
       " [0.         0.         0.         ... 0.         0.         0.        ]\n",
       " ...\n",
       " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.61678615 0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]]\n",
-      "Positive sample for text 0: long live the king\n",
-      "Positive sample for text 1: Nothing can replace GOOGLE SEARCH ENGINE\n",
-      "Positive sample for text 2:  Ask Bing  for ChatGPT\n",
-      "Search Bing  for search results \n",
-      "\n",
-      " \n",
-      "Positive sample for text 3: You should probably be intelligent before you create it artificially\n",
-      "Positive sample for text 4: The Daily podcast has changed its name to the ChatGPT podcast\n",
-      "Positive sample for text 5: ChatGPT about some popular social media platforms \n",
-      "Positive sample for text 6: How ChatGPT Could Drive A Dramatic AI Crypto Token Narrative \n",
-      "Positive sample for text 7: ChatGPT Is a Blurry JPEG of the Web  via  ai\n",
-      "--------------------------------------------------\n",
-      "Platform: Twitter\n",
-      "Batch index: 5\n",
-      "Sample text:  ChatGPT does not have shortcomings around bias \n",
-      "\n",
-      "OpenAI does \n",
-      "\n",
-      "Stop blaming the tool when people programmed it \n",
-      "\n",
-      "You chose to make sure political diversity was not a priority \n",
-      "\n",
-      "Own that choice and dont blame a system for it\n",
-      "Sample Index: tensor(64539)\n",
-      "--------------------------------------------------\n",
-      "Shape of the normalized BoW matrix: (8, 123112)\n",
-      "Batch Adjusted BoW Matrix: [[0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " ...\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n",
-      "Positive sample for text 0: i am sure it does on this one\n",
-      "Positive sample for text 1: Rip content writers \n",
-      "ChatGPT \n",
-      "Positive sample for text 2: no internet connection\n",
-      "Positive sample for text 3:   This is a new kind of humor chatgpt humor\n",
-      "Positive sample for text 4: hah i love it\n",
-      "Positive sample for text 5:  ChatGPT  is a fraud\n",
-      "Positive sample for text 6: What is ChatGPT and why is it important for business  \n",
-      "Positive sample for text 7: ChatGPT is remarkable The ability to repurpose and condense information into coherent sentences is impressive It might make you believe it is human though its extreme literalmindedness leaves it a long way from convincing you it is British\n",
-      "\n",
-      "\n",
-      "--------------------------------------------------\n",
-      "Platform: Twitter\n",
-      "Batch index: 6\n",
-      "Sample text: Chat GPT answers Why does everyone hate the Toronto Maple Leafs\n",
-      " \n",
-      "\n",
-      " \n",
-      "AtlanticDivision EasternConference TorontoMapleLeafs \n",
-      "Sample Index: tensor(55008)\n",
-      "--------------------------------------------------\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of the normalized BoW matrix: (8, 123112)\n",
-      "Batch Adjusted BoW Matrix: [[0.         0.         0.         ... 0.         0.         0.        ]\n",
       " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " ...\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.09161132 0.         0.         ... 0.         0.         0.        ]\n",
       " [0.         0.         0.         ... 0.         0.         0.        ]]\n"
      ]
     }
@@ -617,7 +475,7 @@
     "            print(\"Sample Index:\", targets[0])\n",
     "            print('-' * 50)\n",
     "            \n",
-    "            positive_sample_indices = compute_bow_batchwise(texts, bow_matrix, all_texts, [platform_idx] * len(texts))\n",
+    "            positive_sample_indices = compute_bow_batchwise(texts, bow_matrix, all_texts, [platform_idx] * len(texts), bow_vectorizer, platform_datasets)\n",
     "\n",
     "            for sample_idx, positive_sample_index in enumerate(positive_sample_indices):\n",
     "                positive_text = all_texts[positive_sample_index]\n",
